Fix some animations for the navbar on mobile devices

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -3,6 +3,8 @@
 @import "_navbar";
 @import "_utility";
 
+$md: 768px;
+
 
 body {
     @extend .work-sans;
